Fix and catch slack notifications

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -144,7 +144,7 @@
             </div>
 
             <% if @account.slack_configured? %>
-              <%= form.submit "Save & Test",
+              <%= form.submit "Test",
                     name: "test_slack",
                     value: "true",
                     class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
